get parcials and get parcial
