# app/Http/Controllers/Api/ParcelsController.php
@@ -3,11 +3,14 @@
 namespace App\Http\Controllers\Api;
 
 
+use App\Requests\LimitRequest;
 use Domains\Parcels\Requests\CreateParcelRequest;
 use Domains\Parcels\Resources\ParcelResource;
+use Domains\Parcels\Resources\ParcelsCollection;
 use Domains\Parcels\Services\ParcelsService;
 use Exception;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 use Illuminate\Support\Facades\Auth;
 
 class ParcelsController extends ApiController
@@ -47,7 +50,7 @@ class ParcelsController extends ApiController
      *     )
      * )
      *
-     * Create a new activity.
+     * Create a new parcels.
      *
      * @param CreateParcelRequest $request
      * @param ParcelsService $parcelsService
@@ -56,7 +59,7 @@ class ParcelsController extends ApiController
     public function create(
         CreateParcelRequest $request,
         ParcelsService      $parcelsService
-    )
+    ): JsonResponse|ParcelResource
     {
         try {
             $data = $parcelsService->create(
@@ -66,6 +69,98 @@ class ParcelsController extends ApiController
                 quantity: $request->get('quantity'),
                 storeAddress: $request->get('store_address'),
                 comment: $request->get('comment'),
+            );
+            return new ParcelResource($data);
+        } catch (Exception $exception) {
+            return $this->error($exception);
+        }
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/parcels",
+     *     tags={"Parcels"},
+     *     summary="Get a list of parcels",
+     *     security={{"apiAuth":{}}},
+     *     @OA\Parameter(
+     *         name="limit",
+     *         in="query",
+     *         description="Limit the number of results",
+     *         @OA\Schema(type="integer", example=10),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of parcels",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad request",
+     *         @OA\JsonContent()
+     *     ),
+     * )
+     *
+     * Get a list of parcels.
+     *
+     * @param LimitRequest $request
+     * @param ParcelsService $parcelsService
+     * @return AnonymousResourceCollection|JsonResponse
+     */
+    public function getList(
+        LimitRequest   $request,
+        ParcelsService $parcelsService
+    ): AnonymousResourceCollection|JsonResponse
+    {
+        try {
+            $data = $parcelsService->getList(
+                userId: Auth::id(),
+                limit: $request->get('limit')
+            );
+            return ParcelsCollection::collection($data);
+        } catch (Exception $exception) {
+            return $this->error($exception);
+        }
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/parcels/{id}",
+     *     tags={"Parcels"},
+     *     summary="Get a parcel",
+     *     security={{"apiAuth":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="",
+     *         @OA\Schema(type="integer", example=2),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of parcels",
+     *         @OA\JsonContent()
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad request",
+     *         @OA\JsonContent()
+     *     ),
+     * )
+     *
+     * Get a list of parcels.
+     *
+     * @param int $id
+     * @param ParcelsService $parcelsService
+     * @return ParcelResource|JsonResponse
+     */
+    public function getParcel(
+        int   $id,
+        ParcelsService $parcelsService
+    ): ParcelResource|JsonResponse
+    {
+        try {
+            $data = $parcelsService->getParcel(
+                userId: Auth::id(),
+                id: $id
             );
             return new ParcelResource($data);
         } catch (Exception $exception) {
